--- a/day 2.html
+++ b/day 2.html
@@ -8,6 +8,6 @@
 <body>
     <h1>Hello World</h1>
     <!-- <script src="./day 4.js"></script> -->
-    <script src="./day 6 continued.js"></script>
+    <script src="./day 7.js"></script>
 </body>
 </html>
